projects page kindaa

--- a/app/static/style.css
+++ b/app/static/style.css
@@ -181,3 +181,7 @@ img {
   box-shadow: 1px 1px 10px 10px rgb(218, 46, 80);
   border-radius: 10%;
 }
+
+/* Projects */
+
+/* --------------------------------------------------------------------------------- */
