--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -27,7 +27,9 @@
         <div class="intro-text">
             I'm a
             <strong class="emphasis-text">software developer</strong>
-            with experience in multiple languages.
+            with experience in 
+            <strong class="emphasis-text">full-stack</strong>
+            development.
         </div>
         <div class="work">
             Currently enrolled at 
