--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Robbin Skeen</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/output-onlinetools.png' %}">
     <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="{% static 'styles.css' %}">
 </head>
