--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -1,4 +1,52 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
+<link rel="stylesheet" href="{% static 'projects.css' %}">
+{% comment %} Link for google arrows {% endcomment %}
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
+{% comment %} Link SwiperJS CSS {% endcomment %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
+{% comment %} one {% endcomment %}
+<div class="cont swiper">
+    <div class="card-wrapper">
+        <ul class="card-list swiper-wrapper">
+            <li class="card-item swiper-slide">
+                <a href="#" class="card-link">
+                    <img class="card-image" alt="image" src="{% static "images/wiz-102-logo.png" %}"/>
+                    <p class="badge">Wizard 102</p>
+                    <h2 class="card-title"> Wizard 102 is blah blah blah </h2>
+                    <button class="card-button
+                    material-symbols-rounded">arrow_forward</button>
+                </a>
+            </li>
+            <li class="card-item swiper-slide">
+                <a href="#" class="card-link">
+                    <img class="card-image" alt="image" src="{% static "images/wiz-102-logo.png" %}"/>
+                    <p class="badge">poo</p>
+                    <h2 class="card-title"> Wizard 102 is blah blah blah </h2>
+                    <button class="card-button
+                    material-symbols-rounded">arrow_forward</button>
+                </a>
+            </li>
+            <li class="card-item swiper-slide">
+                <a href="#" class="card-link">
+                    <img class="card-image" alt="image" src="{% static "images/wiz-102-logo.png" %}"/>
+                    <p class="badge">pee</p>
+                    <h2 class="card-title"> Wizard 102 is blah blah blah </h2>
+                    <button class="card-button
+                    material-symbols-rounded">arrow_forward</button>
+                </a>
+            </li>
+            
+        </ul>
+        <div class="swiper-pagination"></div>
+        <div class="siper-slide-button swiper-button-prev"></div>
+        <div class="siper-slide-button swiper-button-next"></div>
+    </div>
+</div>
+
+
+{% comment %} Link to SwiperJS script {% endcomment %}
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script src="{% static 'script.js' %}"></script>
 {% endblock content %}
