--- a/app/static/style.css
+++ b/app/static/style.css
@@ -5,7 +5,9 @@
 */
 
 body {
-    background-color: #0b1016;
+    background-color: #262c34;
+    height: 100vh;
+    width: 100vw
 }
 
 /* NAV BAR */
@@ -128,6 +130,7 @@ nav a:nth-child(3):hover ~ #indicator {
 }
 
 .intro {
+  margin-left: -7%;
   width: 100%;
         padding-top: 40px;
         padding-right: 24px;
@@ -174,14 +177,224 @@ img {
   font-weight: 400;
 }
 
-.me {
+.box {
+  position: relative;
+  width: 400px;
+  height: 400px;
+  background: #151f2a;
+  border-radius: 50%;
+  overflow: hidden;
   margin: -17% 0% 0% 60%;
-  width: 15%;
-  height: 15%;
-  box-shadow: 1px 1px 10px 10px rgb(218, 46, 80);
-  border-radius: 10%;
 }
 
+.box::before{
+  content: '';
+  position: absolute;
+  inset: -10px 140px;
+  background: linear-gradient(315deg ,#DA2E50, #EFE9E7);
+  transition: 0.5s;
+  animation: animate 4s linear infinite;
+}
+
+.box:hover::before {
+  inset: -20px 0px;
+}
+
+@keyframes animate {
+  0%
+  {
+    transform: rotate(0deg);
+  }
+  100%
+  {
+    transform: rotate(360deg);
+  }
+}
+
+.box::after {
+  content: '';
+  position: absolute;
+  inset: 6px;
+  background: #262c34;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+.content {
+  position: absolute;
+  inset: 30px;
+  border: 6px solid #1a2123;
+  z-index: 3;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.content img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 0.5s;
+  pointer-events: none;
+  z-index: 3;
+
+}
+
+.content h2 span{
+   font-weight: 300;
+   font-size: 0.75rem
+}
+
+.content a{
+  position: relative;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background: #DA2E50;
+  color: #EFE9E7;
+  border-radius: 25px;
+  font-weight: 500;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  letter-spacing: 0.2em;
+  text-decoration: none;
+  transition: 0.5s;
+}
+
+.content a:hover{
+  letter-spacing: 0.1em;
+}
+
+.box:hover .content img {
+  opacity: 0;
+}
+
+.content h2 {
+  position: relative;
+  font-size: 1.5rem;
+  text-align: center;
+  color: #DA2E50;
+  font-weight: 600;
+  letter-spacing: 0.05rem;
+  text-transform: uppercase;
+}
 /* Projects */
 
 /* --------------------------------------------------------------------------------- */
+
+
+.skill-box {
+  margin: 10%;
+}
+
+.skill-box-cont {
+  display: grid;
+  gap: 1px;
+  grid-template-columns: repeat(3, 1fr);
+  background-color: #151f2a;
+  border: 3px inset rgb(218, 46, 80);
+  width: 80%;
+  padding: 0% 0% 0% 0%;
+  margin: 0% 0% 0% 0%;
+  text-align: center;
+}
+
+.skill-box-cont-cont {
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+}
+
+.all-logo {
+  width: 20%
+}
+
+.git-logo {
+  width: 15%
+}
+
+.skill-logo {
+  margin:0% 0% 0% 0%;
+  width: 100%;
+  padding: 0% 0% 0% 0%;
+}
+
+.python-word {
+  padding: 0% 0% 0% 0%;
+  margin: 0% 0% 0% 0%;
+  color: rgb(21, 243, 220)
+}
+
+.logo-names {
+  color:#D7D9CE
+}
+
+.skills-header {
+  color: rgb(218, 46, 80);
+  text-align: center;
+  font-size: 40pt;
+  margin-top: 20%;
+}
+
+.center {
+  position: absolute;
+  top: 80%;
+  left: 35%;
+  transform: translate(-50%, -50%)
+}
+
+.down {
+  position: relative;
+  width: 50px;
+  height: 80px;
+  border-radius: 25px;
+  background: transparent;
+  border: 4px solid #fff;
+  overflow: hidden;
+}
+
+.down:before {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #fff;
+  top: 10%;
+  left: 48%;
+  transform: translate(-50%, 0);
+  animation: animation 1s linear infinite;
+}
+
+.down:after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  top: 10%;
+  left: 48%;
+  transform: translate(-50%, 0);
+  border-radius: 3px;
+}
+
+@keyframes animation {
+  0% {
+    transform: translate(-50%, 20px);
+    opacity: 0;
+  }
+  80% {
+    transform: translate(-50%, 60px);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(-50%, 100px);
+    opacity: 0;
+  }
+}
