--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -18,15 +18,15 @@ h1{
 
 .container{
     margin-top: 2.5%;
-    z-index: 1;
+    z-index: 5 !important;
     position: relative;
-    overflow: hidden;
+
     display: flex;
     align-items: center;
     justify-content: center;
     background: url("bg-cover.jfif") fixed;
     background-size: cover;
-    height: 25vh;
+    height: 20vh;
 }
 
 .bird{
