--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -47,8 +47,13 @@
   <div class="content">
     <img src={% static "images/robbin.jpg" %}>
     <h2>Robbin Skeen<br><span>Software Developer</span></h2>
-    <a href="">Resume</a>
+    <a target="_blank" href="https://docs.google.com/document/d/1UOLDR5EGYbsY3DxOKDIj6HPBxSXiasLUV2ppahXFXOc/edit?tab=t.0">Resume</a>
   </div>
+</div>
+<div class="contact-images-hold">
+  <a target="_blank" href="https://github.com/chris-skeen"><img class="images-contact" src={% static "images/github.png" %}></a>
+  <a target="_blank" href="https://www.linkedin.com/in/robbin-skeen-39b94b324/"><img class="images-contact" src={% static "images/linkedin.png" %}></a>
+  <a target="_blank" href=""><img class="images-contact" src={% static "images/mail.png" %}></a>
 </div>
 
 
@@ -93,4 +98,7 @@
           </div>
         </div>
       </div>
+      <footer class="footer">
+        <p>&copy; 2025 Robbin Christopher Skeen. All rights reserved. | Contact:<a class="email-link" href="mailto:chrisskeen2006@gmail.com"> chrisskeen2006@gmail.com</a></p>
+    </footer>
 {% endblock content %}
