maybe this fixes things

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -1,42 +1,40 @@
-{% extends "base.html" %}
-{% load static %}
-{% block content %}
+{% extends "base.html" %} {% load static %} {% block content %}
 <div class="container">
-
-    <div class="bird-container bird-container-one">
-      <div class="bird bird-one"></div>
-    </div>
-    <div class="bird-container bird-container-two">
-        <div class="bird bird-two"></div>
-    </div>
-    <div class="bird-container bird-container-three">
-        <div class="bird bird-three"></div>
-    </div>
-    <div class="bird-container bird-container-four">
-        <div class="bird bird-four"></div>
-    </div>
+  <div class="bird-container bird-container-one">
+    <div class="bird bird-one"></div>
+  </div>
+  <div class="bird-container bird-container-two">
+    <div class="bird bird-two"></div>
+  </div>
+  <div class="bird-container bird-container-three">
+    <div class="bird bird-three"></div>
+  </div>
+  <div class="bird-container bird-container-four">
+    <div class="bird bird-four"></div>
+  </div>
 </div>
-<div class='intro'>
-    <img class="image" src="{% static "images/Pied-Northern-Cardinal-Transparent-PNG.png" %}"/>
-    <div class="intro-text-block">
-        <div class="intro-text">
-            Hey, I'm
-            <strong class="emphasis-text">Robbin</strong>
-            !
-        </div>
-        <div class="intro-text">
-            I'm a
-            <strong class="emphasis-text">software developer</strong>
-            with experience in 
-            <strong class="emphasis-text">full-stack</strong>
-            development.
-        </div>
-        <div class="work">
-            Currently enrolled at 
-           <strong class="emphasis-text">Base Camp Coding Academy</strong>
-           .
-        </div>
+<div class="intro">
+  <img class="image" src="{% static
+  "images/Pied-Northern-Cardinal-Transparent-PNG.png" %}"/>
+  <div class="intro-text-block">
+    <div class="intro-text">
+      Hey, I'm
+      <strong class="emphasis-text">Robbin</strong>
+      !
     </div>
+    <div class="intro-text">
+      I'm a
+      <strong class="emphasis-text">software developer</strong>
+      with experience in
+      <strong class="emphasis-text">full-stack</strong>
+      development.
+    </div>
+    <div class="work">
+      Currently enrolled at
+      <strong class="emphasis-text">Base Camp Coding Academy</strong>
+      .
+    </div>
+  </div>
 </div>
 
 <div class="center">
@@ -46,59 +44,93 @@
 <div class="box">
   <div class="content">
     <img src={% static "images/robbin.jpg" %}>
-    <h2>Robbin Skeen<br><span>Software Developer</span></h2>
-    <a target="_blank" href="https://docs.google.com/document/d/1UOLDR5EGYbsY3DxOKDIj6HPBxSXiasLUV2ppahXFXOc/edit?tab=t.0">Resume</a>
+    <h2>Robbin Skeen<br /><span>Software Developer</span></h2>
+    <a
+      target="_blank"
+      href="https://docs.google.com/document/d/1UOLDR5EGYbsY3DxOKDIj6HPBxSXiasLUV2ppahXFXOc/edit?tab=t.0"
+      >Resume</a
+    >
   </div>
 </div>
 <div class="contact-images-hold">
-  <a target="_blank" href="https://github.com/chris-skeen"><img class="images-contact" src={% static "images/github.png" %}></a>
-  <a target="_blank" href="https://www.linkedin.com/in/robbin-skeen-39b94b324/"><img class="images-contact" src={% static "images/linkedin.png" %}></a>
-  <a target="_blank" href=""><img class="images-contact" src={% static "images/mail.png" %}></a>
+  <a target="_blank" href="https://github.com/chris-skeen"
+    ><img class="images-contact" src={% static "images/github.png" %}></a
+  >
+  <a target="_blank" href="https://www.linkedin.com/in/robbin-skeen-39b94b324/"
+    ><img class="images-contact" src={% static "images/linkedin.png" %}></a
+  >
+  <a target="_blank" href=""
+    ><img class="images-contact" src={% static "images/mail.png" %}></a
+  >
 </div>
 
-
-    <h2 class="skills-header">Skills</h2>
-    <div class="skill-box-cont-cont">
-        <div class="skill-box-cont">
-          <div class="skill-box">
-            <a target='_blank' href="https://www.python.org/"><img class="all-logo" src="{% static "images/python.png"%}"></a>
-            <h2 class="logo-names">Python</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://git-scm.com/"><img class="all-logo" src="{% static "images/git.png"%}"></a>
-            <h2 class="logo-names">Git</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://html.com/"><img class="all-logo" src="{% static "images/html.png"%}"></a>
-            <h2 class="logo-names">HTML</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://www.djangoproject.com/"><img class="all-logo" src="{% static "images/django.png"%}"></a>
-            <h2 class="logo-names">Django</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://www.java.com/en/"><img class="all-logo" src="{% static "images/java.png" %}"></a>
-            <h2 class="logo-names">Java</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://www.javascript.com/"><img class="all-logo" src="{% static "images/javascript.png" %}"></a>
-            <h2 class="logo-names">Javascript</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://www.mysql.com/"><img class="all-logo" src="{% static  "images/sql.png"%}"></a>
-            <h2 class="logo-names">SQL</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://spring.io/"><img class="all-logo" src="{% static "images/spring.png" %}"></a>
-            <h2 class="logo-names">Spring</h2>
-          </div>
-          <div class="skill-box">
-            <a target='_blank' href="https://developer.mozilla.org/en-US/docs/Web/CSS"><img class="all-logo" src="{% static "images/css.png"%}"></a>
-            <h2 class="logo-names">CSS</h2>
-          </div>
-        </div>
-      </div>
-      <footer class="footer">
-        <p>&copy; 2025 Robbin Christopher Skeen. All rights reserved. | Contact:<a class="email-link" href="mailto:chrisskeen2006@gmail.com"> chrisskeen2006@gmail.com</a></p>
-    </footer>
+<h2 class="skills-header">Skills</h2>
+<div class="skill-box-cont-cont">
+  <div class="skill-box-cont">
+    <div class="skill-box">
+      <a target="_blank" href="https://www.python.org/"
+        ><img class="all-logo" src="{% static "images/python.png"%}"></a
+      >
+      <h2 class="logo-names">Python</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://git-scm.com/"
+        ><img class="all-logo" src="{% static "images/git.png"%}"></a
+      >
+      <h2 class="logo-names">Git</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://html.com/"
+        ><img class="all-logo" src="{% static "images/html.png"%}"></a
+      >
+      <h2 class="logo-names">HTML</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://www.djangoproject.com/"
+        ><img class="all-logo" src="{% static "images/django.png"%}"></a
+      >
+      <h2 class="logo-names">Django</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://www.java.com/en/"
+        ><img class="all-logo" src="{% static "images/java.png" %}"></a
+      >
+      <h2 class="logo-names">Java</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://www.javascript.com/"
+        ><img class="all-logo" src="{% static "images/javascript.png" %}"></a
+      >
+      <h2 class="logo-names">Javascript</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://www.mysql.com/"
+        ><img class="all-logo" src="{% static "images/sql.png"%}"></a
+      >
+      <h2 class="logo-names">SQL</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://spring.io/"
+        ><img class="all-logo" src="{% static "images/spring.png" %}"></a
+      >
+      <h2 class="logo-names">Spring</h2>
+    </div>
+    <div class="skill-box">
+      <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/CSS"
+        ><img class="all-logo" src="{% static "images/css.png"%}"></a
+      >
+      <h2 class="logo-names">CSS</h2>
+    </div>
+  </div>
+</div>
+<footer class="footer">
+  <p class="words-footer">
+    &copy; 2025 Robbin Christopher Skeen. All rights reserved. | Contact:<a
+      class="email-link"
+      href="mailto:chrisskeen2006@gmail.com"
+    >
+      chrisskeen2006@gmail.com</a
+    >
+  </p>
+</footer>
 {% endblock content %}
