--- a/app/static/style.css
+++ b/app/static/style.css
@@ -501,6 +501,10 @@ img {
   font-size: 15pt;
 }
 
+.words-footer {
+  color: #EFE9E7;
+}
+
 /*Begin shimmer code*/
 
 @keyframes shine {
@@ -574,7 +578,30 @@ img {
   }
 
   .images-contact {
-    width: 13%;
+    width: 17%;
   }
 
+}
+
+@media only screen and (min-width: 2565px) {
+  .contact-images-hold {
+    top: -8%;
+  }
+
+  .box {
+    width: 500px;
+    height: 500px;
+  }
+
+  .intro {
+    margin-left: -11%;
+  }
+
+  .intro-text {
+    font-size: 37px;
+  }
+
+  .work {
+    font-size: 21px;
+  }
 }
