--- a/staticfiles/style.css
+++ b/staticfiles/style.css
@@ -123,7 +123,10 @@ nav a:nth-child(3):hover ~ #indicator {
 }
 
 /* ----------------------------------------------------------------------------------------------------------------------------------------------- */
-
+.main{
+  width: 100vw;
+  height: 95vh;
+}
 
 .birdy {
   margin: 1% 0% 4% 15%;
@@ -131,15 +134,16 @@ nav a:nth-child(3):hover ~ #indicator {
 }
 
 .intro {
-  margin-left: -7%;
-  width: 100%;
-        padding-top: 40px;
-        padding-right: 24px;
-        -webkit-box-orient: horizontal;
+  width: 100vw;
+  margin-top: 15vh;
+        /* -webkit-box-orient: horizontal;
         -webkit-box-direction: normal;
         -webkit-flex-direction: row;
         -ms-flex-direction: row;
-        flex-direction: row;
+        flex-direction: row; */
+}
+.intro-content{
+width: 50vw;
 }
 
 img {
@@ -151,12 +155,13 @@ img {
 
 .image {
   width: 10%;
-  margin: 5% 0% 0% 20%;
+  margin: 0% 0% 0% 20%;
+  float: left;
 }
 
 .intro-text-block {
   max-width: 540px;
-  margin: -10% 0% 0% 30%
+  margin: 0% 0% 0% 30%
 }
 
 .intro-text {
@@ -180,12 +185,12 @@ img {
 
 .box {
   position: relative;
-  width: 400px;
-  height: 400px;
+  width: 29%;
+  height: 50vh;
   background: #151f2a;
   border-radius: 50%;
   overflow: hidden;
-  margin: -17% 0% 0% 60%;
+  margin: -20% 0% 0% 60%;
 }
 
 .box::before{
@@ -407,9 +412,9 @@ img {
 }
 
 .contact-images-hold {
-  left: 25%;
-  top: -15%;
-  position: relative;
+  left: 20vw;
+  margin-top: -8vh;
+  position: absolute;
 }
 
 .images-contact {
@@ -510,7 +515,7 @@ img {
 
 
 
-@media only screen and (max-width: 600px) {
+/* @media only screen and (max-width: 600px) {
 
   .wrapper {
     width: 60%;
@@ -576,23 +581,21 @@ img {
     width: 13%;
   }
 
-}
+} */
 
-@media only screen and (min-width: 1800px) {
+/* @media only screen and (min-width: 768px) {
   .contact-images-hold {
-    top: -8%;
+    top: -13%;
   }
   .box {
     width: 500px;
     height: 500px;
   }
-  .intro {
-    margin-left: -11%;
-  }
+
   .intro-text {
     font-size: 37px;
   }
   .work {
     font-size: 21px;
   }
-}
+} */
