--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -7,6 +7,7 @@
 {% comment %} Link SwiperJS CSS {% endcomment %}
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
 
+<div class="main">
 <div class="cont swiper">
     <div class="card-wrapper">
         <ul class="card-list swiper-wrapper">
@@ -43,7 +44,7 @@
         <div class="siper-slide-button swiper-button-next"></div>
     </div>
 </div>
-
+</div>
 
 {% comment %} Link to SwiperJS script {% endcomment %}
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
