media query change

--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -50,7 +50,7 @@
     <div class="contact-images-hold">
       <a target="_blank" href="https://github.com/chris-skeen"><img class="images-contact" src={% static "images/github.png" %}></a>
       <a target="_blank" href="https://www.linkedin.com/in/robbin-skeen-39b94b324/"><img class="images-contact" src={% static "images/linkedin.png" %}></a>
-      <a target="_blank" href=""><img class="images-contact" src={% static "images/mail.png" %}></a>
+      <a target="_blank" href="mailto:chrisskeen2006@gmail.com"><img class="images-contact" src={% static "images/mail.png" %}></a>
     </div>
     </div>
 
