--- a/app/static/style.css
+++ b/app/static/style.css
@@ -519,22 +519,46 @@ img {
 
 
 @media only screen and (max-width: 600px) {
+
+  .image {
+    width: 50%;
+  }
+
+  .wrapper {
+    padding-top: 100px;
+    width: 90%;
+    height: 60%;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;  
+  }
   
+  .border { 
+    position: absolute;
+    display: block;
+    top: 5%;
+    left: 90%;
+    z-index: -9;
+    display: block;
+    height: 100%;
+    width: 100%;
+  }
+
+  .main-element {
+    position: absolute;
+    top: 1%;
+    left: 1%;
+    display: block;
+    height: 80%;
+    width: 100%;
+    margin: auto;
+    align-self: center;
+    background: #fff;
+    z-index: 1;
+  }
+
+  body {
+    overflow-x: hidden;
+    max-width: 100%
+  }
 }
-
-/* @media only screen and (min-width: 768px) {
-  .contact-images-hold {
-    top: -13%;
-  }
-  .box {
-    width: 500px;
-    height: 500px;2
-  }
-
-  .intro-text {
-    font-size: 37px;
-  }
-  .work {
-    font-size: 21px;
-  }
-} */
