--- a/app/templates/projects.html
+++ b/app/templates/projects.html
@@ -11,7 +11,7 @@
     <div class="card-wrapper">
         <ul class="card-list swiper-wrapper">
             <li class="card-item swiper-slide">
-                <a href="#" class="card-link">
+                <a href="https://github.com/chris-skeen/Urbex" class="card-link">
                     <img class="card-image" alt="image" src="{% static "images/urbex.png" %}"/>
                     <p class="badge">Urbex</p>
                     <h2 class="card-title">Urbex is a travel website that you can use to find abandoned places near you! You can also post and look at an interactive map.</h2>
